@@ -126,9 +126,5 @@ fi
 
 AC_OUTPUT(
   Makefile
-  doc/Makefile
-  hacking/Makefile
   libspectrum.qpg
-  myglib/Makefile
-  test/Makefile
 )
