@@ -1,5 +1,6 @@
 /*.lo
 /.deps
+/.dirstamp
 /.libs
 /Makefile
 /Makefile.in
